# zk

./: .gitignore  Cargo.toml  readme.md
benches/: multilinear_poly_benchmark.rs  polynomial_benchmark.rs
circom-gkr/: Cargo.toml  readme.md
circom-gkr/src/: main.rs
crypto/: Cargo.toml  readme.md
crypto/src/gkr/: circuit.rs  gate_eval_extension.rs  gkr.rs  mod.rs
crypto/src/polynomial/: univariate_poly.rs
crypto/src/r1cs_gkr/: circuit.rs  mod.rs
crypto/src/sumcheck/: mod.rs  util.rs
fft/: Cargo.toml
fft/src/: lib.rs
gkr/: Cargo.toml
gkr/src/: circuit.rs  gate.rs  gate_eval_extension.rs  layer.rs  protocol.rs  util.rs
polynomial/: Cargo.toml
polynomial/benches/: pairing_index.rs  polynomial_evaluation.rs
polynomial/src/: lib.rs  multilinear_poly.rs  multilinear_poly_2.rs  pairing_index.rs  product_poly.rs  univariate_poly.rs
polynomial/src/composed_poly/: mod.rs  product_poly.rs  sum_poly.rs
polynomial/src/multilinear/: boolean_hypercube.rs  coefficient_form.rs  evaluation_form.rs  mod.rs  pairing_index.rs  pairing_index_2.rs
protocols/: Cargo.toml  readme.md
protocols/src/: lib.rs  reed_solomon_fingerprinting.rs  transcript.rs
protocols/src/gkr/: circuit.rs  gate.rs  gate_eval_extension.rs  gkr.rs  layer.rs  mod.rs  protocol.rs  util.rs
protocols/src/polynomial/: mod.rs  multilinear_poly.rs  univariate_poly.rs
protocols/src/r1cs_gkr/: circuit.rs  constraint.rs  mod.rs  program.rs  proof.rs  readme.md
protocols/src/r1cs_gkr/adapters/circom/: cli_functions.rs  mod.rs
protocols/src/r1cs_gkr/adapters/circom/test_artifacts/program_gkr/: input.json  program.r1cs
protocols/src/r1cs_gkr/adapters/circom/test_artifacts/program_gkr/program_js/: program.wasm
protocols/src/sumcheck/: boolean_hypercube.rs  mod.rs  util.rs
r1cs_gkr/: Cargo.toml
r1cs_gkr/src/: circuit.rs  constraint.rs  lib.rs  program.rs  proof.rs
r1cs_gkr/src/adapters/circom/: cli_functions.rs  mod.rs
r1cs_gkr/src/adapters/circom/test_artifacts/program_gkr/: witness.json
src/: lib.rs  multilinear_poly.rs  polynomial.rs  reed_solomon_fingerprinting.rs  sumcheck.rs  transcript.rs  univariate_lde.rs  univariate_poly.rs
src/circom_gkr/: circuit.rs  constraint.rs  mod.rs  program.rs  proof.rs
src/gkr/: circuit.rs  gate.rs  gate_eval_extension.rs  gkr.rs  layer.rs  mod.rs  prover.rs  util.rs
src/polynomial/: mod.rs  multilinear_extension.rs  multilinear_poly.rs  univariate_poly.rs
src/r1cs_gkr/: circuit.rs  constraint.rs  mod.rs  program.rs  proof.rs
src/sumcheck/: boolean_hypercube.rs  mod.rs  prover.rs  sumcheck.rs  util.rs  verifier.rs
stark/: Cargo.toml
stark/src/: domain.rs  hasher.rs  lib.rs  merkle.rs  util.rs
stark/src/dense_merkle_tree/: merkle.rs  util.rs
stark/src/hasher/: mod.rs  sha3_hasher.rs
stat/: Cargo.toml
stat/src/: lib.rs
stat_runner/: Cargo.toml
stat_runner/src/: gkr.rs  main.rs  r1cs_gkr.rs
sumcheck/: Cargo.toml
sumcheck/src/: boolean_hypercube.rs  lib.rs  prover.rs  util.rs  verifier.rs
sumcheck2/: Cargo.toml
sumcheck2/src/: lib.rs  prover.rs  verifier.rs
sumcheck_old/: Cargo.toml
sumcheck_old/src/: boolean_hypercube.rs  lib.rs  util.rs
transcript/: Cargo.toml
transcript/src/: lib.rs
(+15 files in other folders)
