[package]
name = "thaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "polynomial_benchmark"
harness = false

[[bench]]
name = "multilinear_poly_benchmark"
harness = false
