[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomial = { path = "../polynomial" }
transcript = { path = "../transcript" }
sumcheck = { path = "../sumcheck" }
ark-serialize = { version = "0.4.1", features = ["derive"] }
ark-ff = "0.4.1"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
