[package]
name = "polynomial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-ff = "0.5.0"
ark-bls12-381 = "0.5.0"

[dev-dependencies]
criterion.workspace = true
ark-poly = "0.5.0"
ark-std = "0.5.0"
field-tracker.workspace = true

#[[bench]]
#name = "polynomial_evaluation"
#harness = false

[[bench]]
name = "pairing_index"
harness = false