[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-circom = "0.1.0"
ark-ec = "0.4.1"
ark-ff = "0.4.1"
ark-poly = "0.4.1"
ark-serialize = { version = "0.4.1", features = ["derive"] }
ark-std = "0.4.0"
hex = "0.4.3"
num-bigint = "0.4.3"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
sha3 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"
