[package]
name = "r1cs_gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gkr = { path = "../gkr" }
serde = "1.0.196"
serde_json = "1.0.113"
ark-ff = "0.4.1"
num-bigint = "0.4.3"
ark-bls12-381 = "0.4.0"
ark-serialize = { version = "0.4.1", features = ["derive"] }
ark-bn254 = "0.4.0"
hex = "0.4.3"
ark-circom = "0.1.0"
ark-ec = "0.4.1"
