[package]
name = "stat_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stat = { path = "../stat"}
gkr = { path = "../gkr" }
r1cs_gkr = { path = "../r1cs_gkr" }
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
