[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomial = { path = "../polynomial" }
transcript = { path = "../transcript" }
ark-serialize = { version = "0.4.1", features = ["derive"] }
ark-ff = "0.4.1"
